@@ -91,7 +91,7 @@ draws a rectangle on a surface</td></tr>
 
 <a name=circle><font size=+2><b>circle
 </b></font><br><font size=+1><tt>
-pygame.draw.circle(Surface, color, pos, radius, width) -> Rect
+pygame.draw.circle(Surface, color, pos, radius, width=0) -> Rect
 </tt></font><ul>
 Draws a circular shape on the Surface. The given position
 is the center of the circle, and radius is the size. The width
@@ -105,7 +105,7 @@ This function will temporarily lock the surface.
 
 <a name=ellipse><font size=+2><b>ellipse
 </b></font><br><font size=+1><tt>
-pygame.draw.ellipse(Surface, color, Rect, width) -> Rect
+pygame.draw.ellipse(Surface, color, Rect, width=0) -> Rect
 </tt></font><ul>
 Draws an elliptical shape on the Surface. The given rectangle
 is the area that the circle will fill. The width argument is
@@ -151,7 +151,7 @@ This function will temporarily lock the surface.
 
 <a name=polygon><font size=+2><b>polygon
 </b></font><br><font size=+1><tt>
-pygame.draw.polygon(Surface, color, pointslist, width) -> Rect
+pygame.draw.polygon(Surface, color, pointslist, width=0) -> Rect
 </tt></font><ul>
 Draws a polygonal shape on the Surface. The given pointlist
 is the vertices of the polygon. The width argument is
@@ -165,7 +165,7 @@ This function will temporarily lock the surface.
 
 <a name=rect><font size=+2><b>rect
 </b></font><br><font size=+1><tt>
-pygame.draw.rect(Surface, color, Rect, width) -> Rect
+pygame.draw.rect(Surface, color, Rect, width=0) -> Rect
 </tt></font><ul>
 Draws a rectangular shape on the Surface. The given Rect
 is the area of the rectangle. The width argument is
